Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

25-Jan-2011 Jean-Marie Simonet
 $ Adding el-GR, ka-GE installation langs
 $ Adding fi-FI installation langs. Modifying gu-IN.

24-Jan-2011 Jean-Marie Simonet
 $ Updating af-ZA
 #$ [#24457] Language fixes and new warnings for com_installer. Thanks Sam.
 # [#24540] New Window without navigation. Thanks Byron and Bill.
 $ Updating ru-RU, sk-SK
 $ Updating ca-ES, adding ml-IN installation lang
 $ Correcting parse errors in ml-IN.ini
 #$ [#24573] Backend mod_status private messages pluralisation. Thanks Edgars. Reordered en-GB.mod_status.ini
 
23-Jan-2011 Jean-Marie Simonet
 # [#24523] Improve the cpanel of admin templates + correcting some errors. Thanks Christophe.
 $ Adding bn-BD, ckb-IQ, eo-XX, ta-IN installation langs + updating 35 installation langs for 1.6.1 
 $ Updating vi_VN
 # [#24570] Correcting icon message display in installation with rtl lang
 # [#24463] Admin Trashed menu doesn't display - link error. Thanks Barny and Bill.
 # [#24459] In Users -> Mass Mail Users, the tooltips are not being styled. Thanks Jeremy.
 $ Missing strings in lv-LV
 
22-Jan-2011 Jean-Marie Simonet
 # Updating some TT credits
 # [#24525] In Bluestork, longer labels are being cut off especially radio button labels. Thanks Andrea

21-Jan-2011 Christophe Demko
 # [#24523] Improve the cpanel of admin templates + correting some errors
 # Revert [#24523]

21-Jan-2011 Jean-Marie Simonet
 $ [#24520] Incorrect tooltips in Articles Categories module. Thanks Jozsef and Bill.
 $ [#24518] Incorrect tooltip in Module Manager. Thanks Jozsef and Bill. 
 
20-Jan-2011 Jean-Marie Simonet
 # [#24491] com_contact, wrong string is used in config.xml (COM_CONTACT_FIELD_PROFILE_SHOW_LABEL used twice). Thanks Edgars.